sandbox/geos/fp_geos_c.pas

unit fp_geos_c;

interface

const
  {$IFDEF Linux}
  libgeos_c = 'geos_c';
  {$ENDIF}

  {$IFDEF Windows}
  libgeos_c = 'libgeos_c.dll'; // ?????
  {$ENDIF}

type
  Tsize_t = SizeUInt;
  Psize_t = ^Tsize_t;

  {$IFDEF FPC}
  {$PACKRECORDS C}
  {$ENDIF}


const
  GEOS_VERSION_MAJOR = 3;
  GEOS_VERSION_MINOR = 12;
  GEOS_VERSION_PATCH = 1;
  GEOS_VERSION = '3.12.1';
  GEOS_JTS_PORT = '1.18.0';

  GEOS_CAPI_VERSION_MAJOR = 1;
  GEOS_CAPI_VERSION_MINOR = 18;
  GEOS_CAPI_VERSION_PATCH = 1;
  GEOS_CAPI_VERSION = '3.12.1-CAPI-1.18.1';
  GEOS_CAPI_FIRST_INTERFACE = GEOS_CAPI_VERSION_MAJOR;
  GEOS_CAPI_LAST_INTERFACE = GEOS_CAPI_VERSION_MAJOR + GEOS_CAPI_VERSION_MINOR;

type
  PGEOSContextHandle_t = ^TGEOSContextHandle_t;
  TGEOSContextHandle_t = Pointer;

  TGEOSMessageHandler = procedure(fmt: pchar); varargs; cdecl;
  TGEOSMessageHandler_r = procedure(message: pchar; userdata: pointer); cdecl;

type
  PGEOSGeometry = type Pointer;
  PPGEOSGeometry = ^PGEOSGeometry;
  PGEOSPreparedGeometry = type Pointer;
  PGEOSCoordSequence = type Pointer;
  PGEOSSTRtree = type Pointer;
  PGEOSBufferParams = type Pointer;
  PGEOSMakeValidParams = type Pointer;

type
  PGEOSGeom = ^TGEOSGeom;
  TGEOSGeom = PGEOSGeometry;

  PGEOSCoordSeq = ^TGEOSCoordSeq;
  TGEOSCoordSeq = PGEOSCoordSequence;

type
  TGEOSGeomTypes = longint;

const
  GEOS_POINT = 0;
  GEOS_LINESTRING = 1;
  GEOS_LINEARRING = 2;
  GEOS_POLYGON = 3;
  GEOS_MULTIPOINT = 4;
  GEOS_MULTILINESTRING = 5;
  GEOS_MULTIPOLYGON = 6;
  GEOS_GEOMETRYCOLLECTION = 7;

type
  TGEOSWKBByteOrders = longint;

const
  GEOS_WKB_XDR = 0;
  GEOS_WKB_NDR = 1;

type
  TGEOSWKBFlavors = longint;

const
  GEOS_WKB_EXTENDED = 1;
  GEOS_WKB_ISO = 2;

type
  TGEOSQueryCallback = procedure(item: pointer; userdata: pointer); cdecl;
  TGEOSDistanceCallback = function(item1: pointer; item2: pointer; distance: Pdouble; userdata: pointer): longint; cdecl;
  TGEOSTransformXYCallback = function(x: Pdouble; y: Pdouble; userdata: pointer): longint; cdecl;
  TGEOSInterruptCallback = procedure; cdecl;

function GEOS_interruptRegisterCallback(cb: TGEOSInterruptCallback): TGEOSInterruptCallback; cdecl; external libgeos_c;
procedure GEOS_interruptRequest; cdecl; external libgeos_c;
procedure GEOS_interruptCancel; cdecl; external libgeos_c;
function GEOS_init_r: TGEOSContextHandle_t; cdecl; external libgeos_c;
procedure GEOS_finish_r(handle: TGEOSContextHandle_t); cdecl; external libgeos_c;
function GEOSContext_setNoticeHandler_r(extHandle: TGEOSContextHandle_t; nf: TGEOSMessageHandler): TGEOSMessageHandler; cdecl; external libgeos_c;
function GEOSContext_setErrorHandler_r(extHandle: TGEOSContextHandle_t; ef: TGEOSMessageHandler): TGEOSMessageHandler; cdecl; external libgeos_c;
function GEOSContext_setNoticeMessageHandler_r(extHandle: TGEOSContextHandle_t; nf: TGEOSMessageHandler_r; userData: pointer): TGEOSMessageHandler_r; cdecl; external libgeos_c;
function GEOSContext_setErrorMessageHandler_r(extHandle: TGEOSContextHandle_t; ef: TGEOSMessageHandler_r; userData: pointer): TGEOSMessageHandler_r; cdecl; external libgeos_c;

function GEOSCoordSeq_create_r(handle: TGEOSContextHandle_t; size: dword; dims: dword): PGEOSCoordSequence; cdecl; external libgeos_c;
function GEOSCoordSeq_copyFromBuffer_r(handle: TGEOSContextHandle_t; buf: Pdouble; size: dword; hasZ: longint; hasM: longint): PGEOSCoordSequence; cdecl; external libgeos_c;
function GEOSCoordSeq_copyFromArrays_r(handle: TGEOSContextHandle_t; x: Pdouble; y: Pdouble; z: Pdouble; m: Pdouble; size: dword): PGEOSCoordSequence; cdecl; external libgeos_c;
function GEOSCoordSeq_copyToBuffer_r(handle: TGEOSContextHandle_t; s: PGEOSCoordSequence; buf: Pdouble; hasZ: longint; hasM: longint): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_copyToArrays_r(handle: TGEOSContextHandle_t; s: PGEOSCoordSequence; x: Pdouble; y: Pdouble; z: Pdouble; m: Pdouble): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_clone_r(handle: TGEOSContextHandle_t; s: PGEOSCoordSequence): PGEOSCoordSequence; cdecl; external libgeos_c;
procedure GEOSCoordSeq_destroy_r(handle: TGEOSContextHandle_t; s: PGEOSCoordSequence); cdecl; external libgeos_c;
function GEOSCoordSeq_setX_r(handle: TGEOSContextHandle_t; s: PGEOSCoordSequence; idx: dword; val: double): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_setY_r(handle: TGEOSContextHandle_t; s: PGEOSCoordSequence; idx: dword; val: double): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_setZ_r(handle: TGEOSContextHandle_t; s: PGEOSCoordSequence; idx: dword; val: double): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_setXY_r(handle: TGEOSContextHandle_t; s: PGEOSCoordSequence; idx: dword; x: double; y: double): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_setXYZ_r(handle: TGEOSContextHandle_t; s: PGEOSCoordSequence; idx: dword; x: double; y: double; z: double): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_setOrdinate_r(handle: TGEOSContextHandle_t; s: PGEOSCoordSequence; idx: dword; dim: dword; val: double): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_getX_r(handle: TGEOSContextHandle_t; s: PGEOSCoordSequence; idx: dword; val: Pdouble): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_getY_r(handle: TGEOSContextHandle_t; s: PGEOSCoordSequence; idx: dword; val: Pdouble): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_getZ_r(handle: TGEOSContextHandle_t; s: PGEOSCoordSequence; idx: dword; val: Pdouble): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_getXY_r(handle: TGEOSContextHandle_t; s: PGEOSCoordSequence; idx: dword; x: Pdouble; y: Pdouble): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_getXYZ_r(handle: TGEOSContextHandle_t; s: PGEOSCoordSequence; idx: dword; x: Pdouble; y: Pdouble; z: Pdouble): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_getOrdinate_r(handle: TGEOSContextHandle_t; s: PGEOSCoordSequence; idx: dword; dim: dword; val: Pdouble): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_getSize_r(handle: TGEOSContextHandle_t; s: PGEOSCoordSequence; size: Pdword): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_getDimensions_r(handle: TGEOSContextHandle_t; s: PGEOSCoordSequence; dims: Pdword): longint; cdecl; external libgeos_c;
function GEOSCoordSeq_isCCW_r(handle: TGEOSContextHandle_t; s: PGEOSCoordSequence; is_ccw: pchar): longint; cdecl; external libgeos_c;

function GEOSProject_r(handle: TGEOSContextHandle_t; line: PGEOSGeometry; point: PGEOSGeometry): double; cdecl; external libgeos_c;
function GEOSInterpolate_r(handle: TGEOSContextHandle_t; line: PGEOSGeometry; d: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSProjectNormalized_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; p: PGEOSGeometry): double; cdecl; external libgeos_c;
function GEOSInterpolateNormalized_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; d: double): PGEOSGeometry; cdecl; external libgeos_c;

function GEOSBuffer_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; width: double; quadsegs: longint): PGEOSGeometry; cdecl; external libgeos_c;

type
  TGEOSBufCapStyles = longint;

const
  GEOSBUF_CAP_ROUND = 1;
  GEOSBUF_CAP_FLAT = 2;
  GEOSBUF_CAP_SQUARE = 3;

type
  TGEOSBufJoinStyles = longint;

const
  GEOSBUF_JOIN_ROUND = 1;
  GEOSBUF_JOIN_MITRE = 2;
  GEOSBUF_JOIN_BEVEL = 3;

function GEOSBufferParams_create_r(handle: TGEOSContextHandle_t): PGEOSBufferParams; cdecl; external libgeos_c;
procedure GEOSBufferParams_destroy_r(handle: TGEOSContextHandle_t; parms: PGEOSBufferParams); cdecl; external libgeos_c;
function GEOSBufferParams_setEndCapStyle_r(handle: TGEOSContextHandle_t; p: PGEOSBufferParams; style: longint): longint; cdecl; external libgeos_c;
function GEOSBufferParams_setJoinStyle_r(handle: TGEOSContextHandle_t; p: PGEOSBufferParams; joinStyle: longint): longint; cdecl; external libgeos_c;
function GEOSBufferParams_setMitreLimit_r(handle: TGEOSContextHandle_t; p: PGEOSBufferParams; mitreLimit: double): longint; cdecl; external libgeos_c;
function GEOSBufferParams_setQuadrantSegments_r(handle: TGEOSContextHandle_t; p: PGEOSBufferParams; quadSegs: longint): longint; cdecl; external libgeos_c;
function GEOSBufferParams_setSingleSided_r(handle: TGEOSContextHandle_t; p: PGEOSBufferParams; singleSided: longint): longint; cdecl; external libgeos_c;
function GEOSBufferWithParams_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; p: PGEOSBufferParams; width: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSBufferWithStyle_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; width: double; quadsegs: longint; endCapStyle: longint; joinStyle: longint; mitreLimit: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSDensify_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; tolerance: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSOffsetCurve_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; width: double; quadsegs: longint; joinStyle: longint; mitreLimit: double): PGEOSGeometry; cdecl; external libgeos_c;

function GEOSGeom_createPoint_r(handle: TGEOSContextHandle_t; s: PGEOSCoordSequence): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_createPointFromXY_r(handle: TGEOSContextHandle_t; x: double; y: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_createEmptyPoint_r(handle: TGEOSContextHandle_t): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_createLinearRing_r(handle: TGEOSContextHandle_t; s: PGEOSCoordSequence): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_createLineString_r(handle: TGEOSContextHandle_t; s: PGEOSCoordSequence): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_createEmptyLineString_r(handle: TGEOSContextHandle_t): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_createEmptyPolygon_r(handle: TGEOSContextHandle_t): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_createPolygon_r(handle: TGEOSContextHandle_t; shell: PGEOSGeometry; holes: PPGEOSGeometry; nholes: dword): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_createCollection_r(handle: TGEOSContextHandle_t; _type: longint; geoms: PPGEOSGeometry; ngeoms: dword): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_releaseCollection_r(handle: TGEOSContextHandle_t; collection: PGEOSGeometry; ngeoms: Pdword): PPGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_createEmptyCollection_r(handle: TGEOSContextHandle_t; _type: longint): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_createRectangle_r(handle: TGEOSContextHandle_t; xmin: double; ymin: double; xmax: double; ymax: double): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_clone_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;

procedure GEOSGeom_destroy_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry); cdecl; external libgeos_c;

function GEOSCoverageUnion_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSCoverageIsValid_r(extHandle: TGEOSContextHandle_t; input: PGEOSGeometry; gapWidth: double; output: PPGEOSGeometry): longint; cdecl; external libgeos_c;
function GEOSCoverageSimplifyVW_r(extHandle: TGEOSContextHandle_t; input: PGEOSGeometry; tolerance: double; preserveBoundary: longint): PGEOSGeometry; cdecl; external libgeos_c;
